@@ -1,3 +1,6 @@
+FEB 17 2021
+	IdleScript API now allows you to enable/disable bot paint (i.e. progress reports), bot status, bot coords, and bot xp counter.
+
 FEB 16 2021
 	Global XP/hr calculation is now accurate.
 	AIOFighter, AIOThiever, LimpySnapez, GetMeToArdougne, HarvesterTrainer, HerbHarvester, HerbIdentifier, PowerFletcha now have paint progress reports. 
